updates to files

--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -18,4 +18,11 @@ $screen-xl-min: 1200px;
 // Colors
 $white: #fff;
 $black: #000;
-
+$teal: #5FB2C4;
+$light-blue:#B8E9F4;
+$yellow: #F4CF7E;
+$orange: #D16046;
+$brown:#94705A;
+$light-brown:#E3CEC1;
+$tan: #EAE0D3;
+$sand: #FDF7F1;
