--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -408,3 +408,17 @@ textarea {
 /* =============
     Footer
 ============= */
+/* =============
+    animation
+============= */
+#animation {
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+}
+#animation > div svg {
+  position: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
