--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -417,7 +417,7 @@ textarea {
   z-index: 1000;
 }
 #animation > div svg {
-  position: flex;
+  position: absolute;
   justify-content: center;
   align-items: center;
   width: 100%;
