--- a/dev/scss/sections/_animation.scss
+++ b/dev/scss/sections/_animation.scss
@@ -12,7 +12,7 @@
     >div {
 
         svg {
-            position: flex;
+            position: absolute;
             justify-content: center;
             align-items: center;
             width: 100%;
