--- a/dev/scss/sections/_animation.scss
+++ b/dev/scss/sections/_animation.scss
@@ -4,18 +4,21 @@
 
 #animation {
 
-    position: absolute;
-
+    height: 100vh;
     width: 100%;
-    z-index: 1000;
+   background-color: #FDF7F1;
 
     >div {
+        display: flex;
+        justify-content: center;
 
         svg {
-            position: absolute;
+            display: flex;
             justify-content: center;
+
             align-items: center;
             width: 100%;
+            height: 100%;
         }
     }
 }
